--- a/rss/index.html
+++ b/rss/index.html
@@ -9,23 +9,53 @@
 </head>
 
 <body>
-    <h1>OpenMensa RSS Overview</h1>
+    <header>
+        <h1>OpenMensa RSS Overview</h1>
 
-    <p>
-        In this directory the OpenMensa RSS files are served.
-    </p>
-    <p>
-        They use the same canteen ID as the OpenMensa API does.
-        For instance the TU Wien canteen has ID 1098 and is served at <a
-            href="https://schicho.github.io/openmensarss/1098.xml">https://schicho.github.io/openmensarss/1098.xml</a>.
-    </p>
+        <p>
+            In this directory the OpenMensa RSS files are served.
+        </p>
+        <p>
+            They use the same canteen ID as the OpenMensa API does.
+            For instance the TU Wien canteen has ID 1098 and is served at <a
+                href="https://schicho.github.io/openmensarss/1098.xml">https://schicho.github.io/openmensarss/1098.xml</a>.
+        </p>
 
-    <p>
-        To save bandwidth not all canteens available on OpenMensa are converted to RSS. In case you want to add one,
-        you can add the respective canteen ID to the code at <a
-            href="https://github.com/schicho/openmensarss">https://github.com/schicho/openmensarss</a>.
-    </p>
-    </p>
+        <p>
+            To save bandwidth not all canteens available on OpenMensa are converted to RSS. In case you want to add one,
+            you can add the respective canteen ID to the code at
+            <a href="https://github.com/schicho/openmensarss">https://github.com/schicho/openmensarss</a>.
+        </p>
+        <hr>
+        </hr>
+    </header>
+
+    <main>
+        <h2>Available RSS feeds</h2>
+
+        <p>
+            (the listing requires JavaScript)
+        </p>
+
+        <div id="filelist"></div>
+        <script>
+            (async () => {
+                const response = await fetch('https://api.github.com/repos/schicho/openmensarss/contents/rss');
+                const data = await response.json();
+                let htmlString = '<ul>';
+
+                for (let file of data) {
+                    if (!file.name.endsWith('.xml')) {
+                        continue
+                    }
+                    htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
+                }
+
+                htmlString += '</ul>';
+                document.getElementById('filelist').innerHTML = htmlString;
+            })()
+        </script>
+    </main>
 </body>
 
 </html>
