add the 88x31 to the website

--- a/rss/index.html
+++ b/rss/index.html
@@ -12,6 +12,8 @@
     <header>
         <h1>OpenMensa RSS Overview</h1>
 
+        <img src="omrss.gif"/>
+
         <p>
             In this directory the OpenMensa RSS files are served.
         </p>
