--- a/rss/index.html
+++ b/rss/index.html
@@ -3,16 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title></title>
+    <title>OpenMensa RSS</title>
 </head>
 
 <body>
     <header>
         <h1>OpenMensa RSS Overview</h1>
 
-        <img src="omrss.gif"/>
+        <img src="omrss.gif" alt="OpenMensaRSS Logo" width="88" height="31" />
+        <a href="http://validator.w3.org/feed/check.cgi?url=https%3A//schicho.github.io/openmensarss/1098.xml"><img
+                src="valid-rss-rogers.png" width="88" height="31" alt="[Valid RSS]" title="Validate my RSS feed" /></a>
 
         <p>
             In this directory the OpenMensa RSS files are served.
