--- a/rss/index.html
+++ b/rss/index.html
@@ -16,9 +16,8 @@
         <a href="http://validator.w3.org/feed/check.cgi?url=https%3A//schicho.github.io/openmensarss/1098.xml"><img
                 src="valid-rss-rogers.png" width="88" height="31" alt="[Valid RSS]" title="Validate my RSS feed" /></a>
 
-        <p>
-            In this directory the OpenMensa RSS files are served.
-        </p>
+        <p>In this directory the OpenMensa RSS files are served.</p>
+
         <p>
             They use the same canteen ID as the OpenMensa API does.
             For instance the TU Wien canteen has ID 1098 and is served at <a
@@ -30,6 +29,7 @@
             you can add the respective canteen ID to the code at
             <a href="https://github.com/schicho/openmensarss">https://github.com/schicho/openmensarss</a>.
         </p>
+
         <hr>
         </hr>
     </header>
@@ -37,22 +37,28 @@
     <main>
         <h2>Available RSS feeds</h2>
 
-        <p>
-            (the listing requires JavaScript)
-        </p>
+        <noscript>
+            <p>(the listing requires JavaScript)</p>
+        </noscript>
 
         <div id="filelist"></div>
+
         <script>
             (async () => {
-                const response = await fetch('https://api.github.com/repos/schicho/openmensarss/contents/rss');
-                const data = await response.json();
+                const ghResp = await fetch('https://api.github.com/repos/schicho/openmensarss/contents/rss');
+                const ghData = await ghResp.json();
+
+                const OM_BASE_URL = "https://openmensa.org/api/v2/canteens/";
+
+                const omReqs = ghData.filter(file => file.name.endsWith('.xml')).map(file => file.name.split(".", 1)[0]).map((id) => { return fetch(OM_BASE_URL + id) });
+                const omResps = await Promise.all(omReqs)
+
                 let htmlString = '<ul>';
 
-                for (let file of data) {
-                    if (!file.name.endsWith('.xml')) {
-                        continue
-                    }
-                    htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
+                for (let resp of omResps) {
+                    const data = await resp.json();
+                    const filename = `${data.id}.xml`;
+                    htmlString += `<li><p><a href="${filename}">${filename}</a> ${data.name}</p></li>`;
                 }
 
                 htmlString += '</ul>';
