add loading... text to overview page

--- a/rss/index.html
+++ b/rss/index.html
@@ -41,7 +41,9 @@
             <p>(the listing requires JavaScript)</p>
         </noscript>
 
-        <div id="filelist"></div>
+        <div id="filelist">
+            <p>loading...</p>
+        </div>
 
         <script>
             (async () => {
