--- a/rss/index.html
+++ b/rss/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>OpenMensa RSS</title>
 </head>
 
@@ -15,59 +14,47 @@
         <img src="omrss.gif" alt="OpenMensaRSS Logo" width="88" height="31" />
         <a href="http://validator.w3.org/feed/check.cgi?url=https%3A//schicho.github.io/openmensarss/1098.xml"><img
                 src="valid-rss-rogers.png" width="88" height="31" alt="[Valid RSS]" title="Validate my RSS feed" /></a>
-
-        <p>In this directory the OpenMensa RSS files are served.</p>
-
+    </header>
+    <main>
+        <p>The OpenMensa RSS files are served in this directory.</p>
         <p>
-            They use the same canteen ID as the OpenMensa API does.
-            For instance the TU Wien canteen has ID 1098 and is served at <a
+            They are named according to the canteen IDs of the OpenMensa API.
+            For instance, the TU Wien canteen has ID 1098 and is served at <a
                 href="https://schicho.github.io/openmensarss/1098.xml">https://schicho.github.io/openmensarss/1098.xml</a>.
         </p>
-
         <p>
-            To save bandwidth not all canteens available on OpenMensa are converted to RSS. In case you want to add one,
-            you can add the respective canteen ID to the code at
+            To save on bandwidth, not all canteens available on OpenMensa are converted to RSS by default.
+            In case you want to add another canteen, you can add its respective canteen ID to the code at
             <a href="https://github.com/schicho/openmensarss">https://github.com/schicho/openmensarss</a>.
         </p>
+        <hr />
 
-        <hr>
-        </hr>
-    </header>
-
-    <main>
         <h2>Available RSS feeds</h2>
 
         <noscript>
             <p>(the listing requires JavaScript)</p>
         </noscript>
-
         <div id="filelist">
             <p>loading...</p>
         </div>
-
         <script>
             (async () => {
                 const ghResp = await fetch('https://api.github.com/repos/schicho/openmensarss/contents/rss');
                 const ghData = await ghResp.json();
-
                 const OM_BASE_URL = "https://openmensa.org/api/v2/canteens/";
-
                 const omReqs = ghData.filter(file => file.name.endsWith('.xml')).map(file => file.name.split(".", 1)[0]).map((id) => { return fetch(OM_BASE_URL + id) });
                 const omResps = await Promise.all(omReqs)
 
                 let htmlString = '<ul>';
-
                 for (let resp of omResps) {
                     const data = await resp.json();
                     const filename = `${data.id}.xml`;
                     htmlString += `<li><p><a href="${filename}">${filename}</a> ${data.name}</p></li>`;
                 }
-
                 htmlString += '</ul>';
                 document.getElementById('filelist').innerHTML = htmlString;
             })()
         </script>
     </main>
 </body>
-
 </html>
