usage description on the website

--- a/rss/index.html
+++ b/rss/index.html
@@ -38,9 +38,21 @@
             <a href="https://github.com/schicho/openmensarss/actions">GitHub Actions page</a>
             for any issues with recent updates.
         </p>
+
+        <h2>How to Use the RSS Feeds</h2>
+        <p>
+            You can subscribe to any canteen's RSS feed using Tuwel (TU Wien's Moodle platform) or your preferred RSS
+            reader. Just copy the feed URL and add it to your dashboard or reader to receive menu updates directly from
+            OpenMensa.
+        </p>
+        <p>
+            On Tuwel, enable edit mode (top right), add a new RSS block, and paste the feed URL. Enable item
+            descriptions to see prices and allergen details.
+        </p>
+
         <hr />
 
-        <h2>Available RSS feeds</h2>
+        <h2>Available RSS Feeds</h2>
 
         <noscript>
             <p>(the listing requires JavaScript)</p>
@@ -73,4 +85,5 @@
         </script>
     </main>
 </body>
+
 </html>
