unify colors with main github.io page and link back

--- a/rss/index.html
+++ b/rss/index.html
@@ -87,6 +87,7 @@
       </main>
       <footer>
         <p>OpenMensa RSS Generator</p>
+        <p>Created by <a href="https://schicho.github.io">Johann Sebastian Schicho</a></p>
       </footer>
     </div>
   </body>
