--- a/rss/index.html
+++ b/rss/index.html
@@ -12,7 +12,7 @@
       <header>
         <h1>OpenMensa RSS Overview</h1>
 
-        <img src="omrss.gif" alt="OpenMensaRSS Logo" width="88" height="31" />
+        <a href="."><img src="omrss.gif" alt="OpenMensaRSS Logo" width="88" height="31" /></a>
         <a
           href="http://validator.w3.org/feed/check.cgi?url=https%3A//schicho.github.io/openmensarss/1098.xml"
           ><img
